--- a/tools/iam_migrations/ldap/Cargo.toml
+++ b/tools/iam_migrations/ldap/Cargo.toml
@@ -27,7 +27,7 @@ tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
 ldap3_client = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
-toml = { workspace = true }
+toml_edit = { workspace = true, features = ["serde"] }
 url = { workspace = true, features = ["serde"] }
 uuid = { workspace = true, features = ["serde"] }
 
