--- a/tools/orca/Cargo.toml
+++ b/tools/orca/Cargo.toml
@@ -33,14 +33,13 @@ rand_chacha = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 tokio = { workspace = true, features = ["rt-multi-thread", "sync"] }
-toml = { workspace = true }
+toml_edit = { workspace = true, features = ["serde"] }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
-uuid = { workspace = true, features = ["serde", "v4" ] }
+uuid = { workspace = true, features = ["serde", "v4"] }
 
 [target.'cfg(not(any(target_family = "windows", target_os = "illumos")))'.dependencies]
 mimalloc = { workspace = true }
 
 [build-dependencies]
 kanidm_build_profiles = { workspace = true }
-
