--- a/.github/workflows/clippy.yml
+++ b/.github/workflows/clippy.yml
@@ -34,6 +34,7 @@ jobs:
             pkg-config \
             tpm-udev \
             tss2
+          find / -name tss2-sys.pc
 
       - name: "Run clippy (ignores errors, this is just a check)"
         run: cargo clippy --all-features --all-targets
