--- a/server/core/Cargo.toml
+++ b/server/core/Cargo.toml
@@ -20,6 +20,7 @@ async-trait = { workspace = true }
 axum = { workspace = true }
 axum-auth = "0.4.1"
 axum-csp = { workspace = true }
+axum-extra = { version = "0.7.7", features = ["cookie"] }
 axum-macros = "0.3.8"
 axum-server = { version = "0.5.1", features = ["tls-openssl"] }
 bytes = { workspace = true }
