--- a/unix_integration/Cargo.toml
+++ b/unix_integration/Cargo.toml
@@ -67,6 +67,7 @@ kanidm_proto = { workspace = true }
 kanidm-hsm-crypto = { workspace = true }
 kanidm_lib_crypto = { workspace = true }
 kanidm_lib_file_permissions = { workspace = true }
+mimalloc = { workspace = true }
 notify-debouncer-full = { workspace = true }
 rpassword = { workspace = true }
 rusqlite = { workspace = true }
