Regrets Dot Pee Enn Gee

--- a/libs/client/Cargo.toml
+++ b/libs/client/Cargo.toml
@@ -24,6 +24,8 @@ reqwest = { workspace = true, default-features = false, features = [
 ] }
 kanidm_proto = { workspace = true }
 kanidm_lib_file_permissions = { workspace = true }
+http = { workspace = true }
+hyper = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 time = { workspace = true, features = ["serde", "std"] }
@@ -39,4 +41,4 @@ toml = { workspace = true }
 uuid = { workspace = true, features = ["serde", "v4"] }
 url = { workspace = true, features = ["serde"] }
 webauthn-rs-proto = { workspace = true, features = ["wasm"] }
-hyper = { workspace = true }
+# hyper = { workspace = true }
