--- a/server/lib/Cargo.toml
+++ b/server/lib/Cargo.toml
@@ -102,13 +102,12 @@ whoami = { workspace = true }
 # default = [ "libsqlite3-sys/bundled", "openssl/vendored" ]
 
 [dev-dependencies]
+compact_jwt = { workspace = true, features = ["openssl", "hsm-crypto", "unsafe_release_without_verify"] }
 criterion = { workspace = true, features = ["html_reports"] }
-webauthn-authenticator-rs = { workspace = true }
-
 futures = { workspace = true }
 kanidmd_lib_macros = { workspace = true }
-
-compact_jwt = { workspace = true, features = ["openssl", "hsm-crypto", "unsafe_release_without_verify"] }
+mimalloc = { workspace = true }
+webauthn-authenticator-rs = { workspace = true }
 
 [build-dependencies]
 hashbrown = { workspace = true }
