Stats collection improvements and a bunch of other stuff (#2820)

--- a/tools/orca/Cargo.toml
+++ b/tools/orca/Cargo.toml
@@ -19,6 +19,7 @@ doctest = false
 
 [dependencies]
 async-trait = { workspace = true }
+chrono = { workspace = true }
 clap = { workspace = true }
 crossbeam = { workspace = true }
 csv = { workspace = true }
