Okay, base types are in.

--- a/libs/crypto/Cargo.toml
+++ b/libs/crypto/Cargo.toml
@@ -27,9 +27,11 @@ kanidm-hsm-crypto = { workspace = true }
 openssl-sys = { workspace = true }
 openssl = { workspace = true }
 rand = { workspace = true }
+sha2 = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 tracing = { workspace = true }
 uuid = { workspace = true }
+x509-cert = { workspace = true }
 
 [dev-dependencies]
 sketching = { workspace = true }
