--- a/Cargo.toml
+++ b/Cargo.toml
@@ -197,6 +197,7 @@ serde = "^1.0.197"
 serde_cbor = { version = "0.12.0-dev", package = "serde_cbor_2" }
 serde_json = "^1.0.114"
 serde-wasm-bindgen = "0.5"
+sha2 = "0.10.8"
 shellexpand = "^2.1.2"
 smartstring = "^1.0.1"
 smolset = "^1.3.1"
@@ -242,6 +243,8 @@ webauthn-rs-proto = "0.5.0"
 web-sys = "^0.3.69"
 whoami = "^1.5.1"
 walkdir = "2"
+
+x509-cert = "0.2.5"
 
 yew = "^0.20.0"
 yew-router = "^0.17.0"
