--- a/server/daemon/Cargo.toml
+++ b/server/daemon/Cargo.toml
@@ -28,12 +28,11 @@ kanidm_proto = { workspace = true }
 kanidmd_core = { workspace = true }
 kanidm_lib_file_permissions = { workspace = true }
 sketching = { workspace = true }
-fs2 = { workspace = true }
+fs4 = { workspace = true }
 futures = { workspace = true }
 
 dhat = { workspace = true, optional = true }
 clap = { workspace = true, features = ["env"] }
-mimalloc = { workspace = true }
 reqwest = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
@@ -55,6 +54,9 @@ whoami = { workspace = true }
 
 [target.'cfg(not(target_family = "windows"))'.dependencies]
 kanidm_utils_users = { workspace = true }
+
+[target.'cfg(not(target_os = "illumos"))'.dependencies]
+mimalloc = { workspace = true }
 
 [build-dependencies]
 serde = { workspace = true, features = ["derive"] }
