--- a/tools/orca/Cargo.toml
+++ b/tools/orca/Cargo.toml
@@ -28,7 +28,6 @@ hashbrown = { workspace = true }
 kanidm_client = { workspace = true }
 kanidm_proto = { workspace = true }
 mathru = { workspace = true }
-mimalloc = { workspace = true }
 rand = { workspace = true }
 rand_chacha = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
@@ -38,6 +37,9 @@ toml = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 uuid = { workspace = true, features = ["serde", "v4" ] }
+
+[target.'cfg(not(any(target_family = "windows", target_os = "illumos")))'.dependencies]
+mimalloc = { workspace = true }
 
 [build-dependencies]
 kanidm_build_profiles = { workspace = true }
