--- a/unix_integration/resolver/Cargo.toml
+++ b/unix_integration/resolver/Cargo.toml
@@ -46,27 +46,28 @@ test = true
 doctest = false
 
 [lib]
-name = "kanidm_unix_common"
+name = "kanidm_unix_resolver"
 path = "src/lib.rs"
 test = true
 doctest = false
 
 [dependencies]
 async-trait.workspace = true
-base64urlsafedata = { workspace = true }
+# base64urlsafedata = { workspace = true }
 bytes = { workspace = true }
 clap = { workspace = true, features = ["derive", "env"] }
-csv = { workspace = true }
+# csv = { workspace = true }
 futures = { workspace = true }
 hashbrown = { workspace = true }
 libc = { workspace = true }
-libsqlite3-sys = { workspace = true }
+# libsqlite3-sys = { workspace = true }
 lru = { workspace = true }
 kanidm_client = { workspace = true }
 kanidm_proto = { workspace = true }
 kanidm-hsm-crypto = { workspace = true }
 kanidm_lib_crypto = { workspace = true }
 kanidm_lib_file_permissions = { workspace = true }
+kanidm_unix_common = { workspace = true }
 notify-debouncer-full = { workspace = true }
 rpassword = { workspace = true }
 rusqlite = { workspace = true }
@@ -74,7 +75,6 @@ selinux = { workspace = true, optional = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 sketching = { workspace = true }
-
 toml = { workspace = true }
 tokio = { workspace = true, features = [
     "rt",
