--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,9 +18,10 @@ members = [
     "tools/iam_migrations/freeipa",
     "tools/iam_migrations/ldap",
     "tools/orca",
-    "unix_integration",
+    "unix_integration/common",
     "unix_integration/nss_kanidm",
     "unix_integration/pam_kanidm",
+    "unix_integration/resolver",
     "server/web_ui/admin",
     "server/web_ui/login_flows",
     "server/web_ui/user",
@@ -135,7 +136,7 @@ kanidm-hsm-crypto = "^0.2.0"
 kanidm_lib_crypto = { path = "./libs/crypto", version = "=1.3.0-dev" }
 kanidm_lib_file_permissions = { path = "./libs/file_permissions", version = "=1.3.0-dev" }
 kanidm_proto = { path = "./proto", version = "=1.3.0-dev" }
-kanidm_unix_int = { path = "./unix_integration", version = "=1.3.0-dev" }
+kanidm_unix_common = { path = "./unix_integration/common", version = "=1.3.0-dev" }
 kanidm_utils_users = { path = "./libs/users", version = "=1.3.0-dev" }
 sketching = { path = "./libs/sketching", version = "=1.3.0-dev" }
 
