--- a/unix_integration/nss_kanidm/Cargo.toml
+++ b/unix_integration/nss_kanidm/Cargo.toml
@@ -15,7 +15,7 @@ crate-type = [ "cdylib" ]
 path =  "src/lib.rs"
 
 [dependencies]
-kanidm_unix_int = { workspace = true }
+kanidm_unix_common = { workspace = true }
 
 [target.'cfg(not(target_family = "windows"))'.dependencies]
 libnss = { workspace = true }
