--- a/unix_integration/resolver/Cargo.toml
+++ b/unix_integration/resolver/Cargo.toml
@@ -19,54 +19,55 @@ tpm = ["kanidm-hsm-crypto/tpm"]
 
 [[bin]]
 name = "kanidm_unixd"
-path = "src/daemon.rs"
+path = "src/bin/kanidm_unixd.rs"
 required-features = ["unix"]
 test = true
 doctest = false
 
 [[bin]]
 name = "kanidm_unixd_tasks"
-path = "src/tasks_daemon.rs"
+path = "src/bin/kanidm_unixd_tasks.rs"
 required-features = ["unix"]
 test = true
 doctest = false
 
 [[bin]]
 name = "kanidm_ssh_authorizedkeys"
-path = "src/ssh_authorizedkeys.rs"
+path = "src/bin/kanidm_ssh_authorizedkeys.rs"
 required-features = ["unix"]
 test = true
 doctest = false
 
 [[bin]]
 name = "kanidm-unix"
-path = "src/tool.rs"
+path = "src/bin/kanidm-unix.rs"
 required-features = ["unix"]
 test = true
 doctest = false
 
 [lib]
-name = "kanidm_unix_common"
+name = "kanidm_unix_resolver"
 path = "src/lib.rs"
 test = true
 doctest = false
 
 [dependencies]
 async-trait.workspace = true
-base64urlsafedata = { workspace = true }
+# base64urlsafedata = { workspace = true }
 bytes = { workspace = true }
 clap = { workspace = true, features = ["derive", "env"] }
-csv = { workspace = true }
+# csv = { workspace = true }
 futures = { workspace = true }
 hashbrown = { workspace = true }
 libc = { workspace = true }
-libsqlite3-sys = { workspace = true }
+# libsqlite3-sys = { workspace = true }
 lru = { workspace = true }
 kanidm_client = { workspace = true }
 kanidm_proto = { workspace = true }
 kanidm-hsm-crypto = { workspace = true }
 kanidm_lib_crypto = { workspace = true }
 kanidm_lib_file_permissions = { workspace = true }
+kanidm_unix_common = { workspace = true }
 notify-debouncer-full = { workspace = true }
 rpassword = { workspace = true }
 rusqlite = { workspace = true }
@@ -74,7 +75,6 @@ selinux = { workspace = true, optional = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 sketching = { workspace = true }
-
 toml = { workspace = true }
 tokio = { workspace = true, features = [
     "rt",
