--- a/examples/insecure_server.toml
+++ b/examples/insecure_server.toml
@@ -5,15 +5,15 @@ db_fs_type = "zfs"
 db_path = "/tmp/kanidm/kanidm.db"
 tls_chain = "/tmp/kanidm/chain.pem"
 tls_key = "/tmp/kanidm/key.pem"
-tls_client_ca = "/tmp/kanidm/client_ca"
+# tls_client_ca = "/tmp/kanidm/client_ca"
 
 #   The log level of the server. May be one of info, debug, trace
 #
 #   NOTE: this is overridden by KANIDM_LOG_LEVEL environment variable
 #   Defaults to "info"
 #
-log_level = "info"
-# log_level = "debug"
+# log_level = "info"
+log_level = "debug"
 # log_level = "trace"
 
 # otel_grpc_url = "http://localhost:4317"
