--- a/examples/insecure_server.toml
+++ b/examples/insecure_server.toml
@@ -12,8 +12,8 @@ tls_key = "/tmp/kanidm/key.pem"
 #   NOTE: this is overridden by KANIDM_LOG_LEVEL environment variable
 #   Defaults to "info"
 #
-# log_level = "info"
-log_level = "debug"
+log_level = "info"
+# log_level = "debug"
 # log_level = "trace"
 
 # otel_grpc_url = "http://localhost:4317"
