--- a/Cargo.toml
+++ b/Cargo.toml
@@ -271,7 +271,7 @@ tokio-util = "^0.7.10"
 toml = "^0.5.11"
 tracing = { version = "^0.1.40", features = [
     "max_level_trace",
-    # "release_max_level_debug",
+    "release_max_level_debug",
 ] }
 # tracing = { version = "^0.1.37" }
 tracing-subscriber = { version = "^0.3.18", features = ["env-filter"] }
