--- a/Cargo.toml
+++ b/Cargo.toml
@@ -140,8 +140,8 @@ kanidm_unix_common = { path = "./unix_integration/common", version = "=1.3.0-dev
 kanidm_utils_users = { path = "./libs/users", version = "=1.3.0-dev" }
 sketching = { path = "./libs/sketching", version = "=1.3.0-dev" }
 
-serde_with = "3.7.0"
 argon2 = { version = "0.5.3", features = ["alloc"] }
+askama = { version = "0.12.1", features = ["serde"] }
 async-recursion = "1.1.0"
 async-trait = "^0.1.78"
 axum = { version = "0.7.5", features = [
@@ -154,6 +154,7 @@ axum = { version = "0.7.5", features = [
     "tokio",
     "tracing",
 ] }
+axum-htmx = { version = "0.5.0", features = ["serde", "guards"] }
 base32 = "^0.4.0"
 base64 = "^0.22.1"
 base64urlsafedata = "0.5.0"
@@ -238,6 +239,7 @@ rand_chacha = "0.3.1"
 regex = "1.10.5"
 reqwest = { version = "0.12.5", default-features = false, features = [
     "cookies",
+    "http2",
     "json",
     "gzip",
     "native-tls",
@@ -253,6 +255,7 @@ serde = "^1.0.197"
 serde_cbor = { version = "0.12.0-dev", package = "serde_cbor_2" }
 serde_json = "^1.0.119"
 serde-wasm-bindgen = "0.5"
+serde_with = "3.7.0"
 sha2 = "0.10.8"
 shellexpand = "^2.1.2"
 smartstring = "^1.0.1"
