--- a/.github/workflows/docker_build_kanidmd.yml
+++ b/.github/workflows/docker_build_kanidmd.yml
@@ -71,9 +71,9 @@ jobs:
     # This step is split so that we don't apply "packages: write" permission
     # except when uploading the final Docker image to GHCR.
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/master' && github.repository == 'kanidm/kanidm'
+    if: ( github.ref_type== 'tag' || github.ref == 'refs/heads/master' ) && github.repository == 'kanidm/kanidm'
     needs: kanidmd_build
-    permissions:
+    permissions: 
       packages: write
 
     steps:
