--- a/.github/workflows/pykanidm.yml
+++ b/.github/workflows/pykanidm.yml
@@ -33,7 +33,7 @@ jobs:
         run: |
           cd pykanidm
           poetry install
-          poetry run ruff kanidm tests
+          poetry run ruff check kanidm tests
       - name: Running pytest
         run: |
           cd pykanidm
