--- a/libs/profiles/container_generic.toml
+++ b/libs/profiles/container_generic.toml
@@ -1,4 +1,5 @@
 web_ui_pkg_path = "/pkg"
+htmx_ui_pkg_path = "/hpkg"
 # Don't set the cpu_flags to autodetect for this platform
 # cpu_flags = "none"
 admin_bind_path = "/data/kanidmd.sock"
