--- a/libs/profiles/developer.toml
+++ b/libs/profiles/developer.toml
@@ -1,4 +1,5 @@
 web_ui_pkg_path = "../web_ui/pkg"
+htmx_ui_pkg_path = "../core/static"
 # Set to native for developer machines.
 cpu_flags = "native"
 admin_bind_path = "/tmp/kanidmd.sock"
