--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -73,6 +73,7 @@ RUN \
 
 COPY --from=builder /usr/src/kanidm/target/release/kanidmd /sbin/
 COPY --from=builder /usr/src/kanidm/server/web_ui/pkg /pkg
+COPY --from=builder /usr/src/kanidm/server/core/static /hpkg
 RUN chmod +x /sbin/kanidmd
 
 EXPOSE 8443 3636
