--- a/examples/systemd/kanidm-unixd-tasks.service
+++ b/examples/systemd/kanidm-unixd-tasks.service
@@ -7,7 +7,7 @@ After=chronyd.service ntpd.service network-online.target kanidm-unixd.service
 
 [Service]
 User=root
-Type=simple
+Type=notify
 ExecStart=/usr/local/sbin/kanidm_unixd_tasks
 
 ReadWritePaths=/home /var/run/kanidm-unixd
