--- a/examples/systemd/kanidm-unixd.service
+++ b/examples/systemd/kanidm-unixd.service
@@ -7,7 +7,7 @@ After=chronyd.service ntpd.service network-online.target
 
 [Service]
 DynamicUser=yes
-Type=simple
+Type=notify
 ExecStart=/usr/local/sbin/kanidm_unixd
 
 CacheDirectory=kanidm-unixd
