--- a/platform/debian/systemd/kanidm-unixd-tasks.service
+++ b/platform/debian/systemd/kanidm-unixd-tasks.service
@@ -7,7 +7,7 @@ After=chronyd.service ntpd.service network-online.target kanidm-unixd.service
 
 [Service]
 User=root
-Type=simple
+Type=notify
 ExecStart=/usr/sbin/kanidm_unixd_tasks
 
 # because kanidm-unixd might have failed for some reason but we need to try again later
