--- a/tools/orca/profile-sample.toml
+++ b/tools/orca/profile-sample.toml
@@ -1,10 +1,17 @@
-control_uri = "https://localhost:8443"
+person_count_by_group = [
+  ["role_people_self_write_mail", 500]
+  ["role_people_self_set_password", 0],
 admin_password = ""
-idm_admin_password = ""
-seed = -1236045086759770365
+control_uri = "https://localhost:8443"
 extra_uris = []
-warmup_time = 10 
-test_time = 180
 group_count = 5
+idm_admin_password = ""
 person_count = 500
+seed = -1236045086759770365
+test_time = 180
 thread_count = 20
+warmup_time = 10
+["role_people_pii_reader",0],
+["role_people_self_read_account",0],
+["role_people_self_read_memberof",0],
+]
