--- a/platform/opensuse/kanidm-unixd-tasks.service
+++ b/platform/opensuse/kanidm-unixd-tasks.service
@@ -3,7 +3,7 @@
 
 [Unit]
 Description=Kanidm Local Tasks
-After=chronyd.service ntpd.service network-online.target kanidm-unixd.service
+After=chronyd.service ntpd.service network-online.target suspend.target kanidm-unixd.service
 Requires=kanidm-unixd.service
 
 [Service]
