--- a/platform/opensuse/kanidm-unixd.service
+++ b/platform/opensuse/kanidm-unixd.service
@@ -3,7 +3,7 @@
 
 [Unit]
 Description=Kanidm Local Client Resolver
-After=chronyd.service nscd.service ntpd.service network-online.target
+After=chronyd.service nscd.service ntpd.service network-online.target suspend.target
 Before=systemd-user-sessions.service sshd.service nss-user-lookup.target
 Wants=nss-user-lookup.target
 # While it seems confusing, we need to be after nscd.service so that the
