more markdowny linty things

--- a/.github/workflows/kanidm_individual_book.yml
+++ b/.github/workflows/kanidm_individual_book.yml
@@ -52,7 +52,7 @@ jobs:
 
       - name: Build the docs
         run: |
-          cargo install mdbook-template mdbook-mermaid
+          cargo install mdbook-alerts mdbook-mermaid
           cargo doc --no-deps
           mdbook build *book
           rm -rf ./docs/
