--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ members = [
     "libs/crypto",
     "libs/file_permissions",
     "libs/profiles",
+    "libs/scim_proto",
     "libs/sketching",
     "libs/users",
 ]
@@ -113,9 +114,6 @@ codegen-units = 256
 # ldap3_client = { git = "https://github.com/kanidm/ldap3.git" }
 # ldap3_proto = { git = "https://github.com/kanidm/ldap3.git" }
 
-# scim_proto = { path = "../scim/proto" }
-# scim_proto = { git = "https://github.com/kanidm/scim.git"  }
-
 # base64urlsafedata = { path = "../webauthn-rs/base64urlsafedata" }
 # webauthn-authenticator-rs = { path = "../webauthn-rs/webauthn-authenticator-rs" }
 # webauthn-rs = { path = "../webauthn-rs/webauthn-rs" }
@@ -138,6 +136,7 @@ kanidm_lib_file_permissions = { path = "./libs/file_permissions", version = "=1.
 kanidm_proto = { path = "./proto", version = "=1.3.0-dev" }
 kanidm_unix_common = { path = "./unix_integration/common", version = "=1.3.0-dev" }
 kanidm_utils_users = { path = "./libs/users", version = "=1.3.0-dev" }
+scim_proto = { path = "./libs/scim_proto", version = "=1.3.0-dev" }
 sketching = { path = "./libs/sketching", version = "=1.3.0-dev" }
 
 anyhow = { version = "1.0.86" }
@@ -232,6 +231,7 @@ opentelemetry_sdk = "0.20.0"
 tracing-opentelemetry = "0.21.0"
 
 paste = "^1.0.14"
+peg = "0.8"
 pkg-config = "^0.3.30"
 prctl = "1.0.0"
 proc-macro2 = "1.0.86"
@@ -251,7 +251,6 @@ reqwest = { version = "0.12.5", default-features = false, features = [
 rpassword = "^7.3.1"
 rusqlite = { version = "^0.28.0", features = ["array", "bundled"] }
 
-scim_proto = "^0.2.2"
 sd-notify = "^0.4.2"
 selinux = "^0.4.3"
 serde = "^1.0.204"
