--- a/.github/workflows/rust_build.yml
+++ b/.github/workflows/rust_build.yml
@@ -71,7 +71,7 @@ jobs:
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
         with:
-          toolchain: "{{ matrix.rust_version }}"
+          toolchain: ${{ matrix.rust_version }}
       - name: Setup sccache
         uses: mozilla-actions/sccache-action@v0.0.5
         with:
