--- a/tools/orca/profile-sample.toml
+++ b/tools/orca/profile-sample.toml
@@ -1,10 +1,24 @@
-control_uri = "https://localhost:8443"
 admin_password = ""
-idm_admin_password = ""
-seed = -1236045086759770365
+control_uri = "https://localhost:8443"
 extra_uris = []
-warmup_time = 10 
-test_time = 180
 group_count = 5
+idm_admin_password = ""
+model = "writer"
 person_count = 500
+seed = -1236045086759770365
+test_time = 60
 thread_count = 20
+warmup_time = 10
+
+[group.role_people_self_mail_write]
+member_count = 500
+[group.role_people_self_set_password]
+member_count = 0
+[group.role_people_pii_reader]
+member_count = 0
+[group.role_people_self_read_profile]
+member_count = 0
+[group.role_people_self_read_member_of]
+member_count = 0
+[group.role_people_group_admin]
+member_count = 0
