--- a/.github/workflows/clippy.yml
+++ b/.github/workflows/clippy.yml
@@ -33,7 +33,7 @@ jobs:
             tpm-udev \
             libtss2-dev
       - name: "Run clippy"
-        run: cargo clippy --all-features --all-targets
+        run: cargo clippy --all-features
   fmt:
     runs-on: ubuntu-latest
     steps:
