--- a/server/lib/Cargo.toml
+++ b/server/lib/Cargo.toml
@@ -90,7 +90,7 @@ webauthn-rs = { workspace = true, features = [
 ] }
 webauthn-rs-core = { workspace = true }
 zxcvbn = { workspace = true }
-serde_with = { workspace = true }
+serde_with = { workspace = true, features = ["time_0_3", "base64"] }
 hex.workspace = true
 lodepng = { workspace = true }
 image = { workspace = true, default-features = false, features = [
