--- a/proto/Cargo.toml
+++ b/proto/Cargo.toml
@@ -20,7 +20,6 @@ wasm = ["webauthn-rs-proto/wasm"]
 
 [dependencies]
 base32 = { workspace = true }
-enum-iterator = { workspace = true }
 num_enum = { workspace = true }
 scim_proto = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
@@ -34,3 +33,6 @@ urlencoding = { workspace = true }
 utoipa = { workspace = true }
 uuid = { workspace = true, features = ["serde"] }
 webauthn-rs-proto = { workspace = true }
+
+[dev-dependencies]
+enum-iterator = { workspace = true }
